# clip-qrcode-share

./: README.md  clip-qrcode-share  clip-qrcode-share-0.2-1.fc36.noarch.rpm  clip-qrcode-share-0.2.deb  clip-qrcode-share-0.3-1.fc36.noarch.rpm  clip-qrcode-share-0.3.deb  clip-qrcode-share.desktop  clip-qrcode-share.spec  clip-qrcode-share.vala  clip2qrcode  clip2qrcode.vala  control  droopy  meson.build  perl生成rpm+deb包
